src/test/ui/symbol-names/basic.stderr
error: symbol-name(_ZN5basic4main17h08bcaf310214ed52E)
  --> $DIR/basic.rs:3:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: def-path(main)
  --> $DIR/basic.rs:4:1
   |
LL | #[rustc_def_path]
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

